steps 1 and two of twitter clone

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 								</ul>
 							</div>
 
-							<!-- STEP 7: The Retweets/timestamp/Reply areas below should also be hidden by default. These should only expand if you click on the tweet. Use a jQuery animation to accomplish the reveal, similar to how it’s done on Twitter.com -->
+							<!-- STEP 7: The Retweets/timestamp/Reply areas below should also be hidden by default. These should only expand if you click on the tweet. 
+							Use a jQuery animation to accomplish the reveal, similar to how it’s done on Twitter.com -->
 							<!-- HINT: jQuery ".on" eventHandler -->
 							<div class="stats">
 								<div class="retweets">
@@ -178,5 +179,8 @@
 				</div><!-- #stream -->
 			</div><!-- #main -->
 		</div><!-- #page-container -->
+
+		<script rel="text/javascript" src="./js/jquery-2.0.3.min.js"></script>
+		<script rel="text/javascript" src="./js/animations.js"></script>
 	</body>
 </html>
