a valid tweet is prepended to the top of the stream

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<div id="profile-summary">
 					<div class="content">
 						<img class='avatar' src='img/alagoon.jpg' />
-						<p>Your Name Here</p>
+						<p>Jessica Po&eacute;mape</p>
 					</div>
 				</div>
 				<div id="tweet-content">
@@ -39,7 +39,8 @@
 				<h2>Tweets</h2>
 				<div id="stream">
 
-					<!-- STEP 5: When the user successfully inputs characters and clicks the “Tweet” button, a new tweet should be created and added to the tweet stream in the main column, using the user’s fake profile image in the top left and username/fullname. -->
+					<!-- STEP 5: When the user successfully inputs characters and clicks the “Tweet” button, a new tweet should be created and added to the tweet stream in the main 
+					column, using the user’s fake profile image in the top left and username/fullname. -->
 					<!-- HINT: jQuery ".prepend" method -->
 					<div class="tweet">
 						<div class="content">
